appId: com.epam.mobitru
---
- launchApp:
    appId: com.epam.mobitru
    clearState: true
    stopApp: true
- assertVisible: "Login"
- tapOn:
    below:
      text: "Login"
- inputText: "testuser@mobitru.com"
- tapOn:
    below:
      text: "Password"
- inputText: "password1"
- hideKeyboard
- tapOn: "Sign In"
- assertVisible: "category"
