appId: com.epam.mobitru
---
- launchApp:
    appId: com.epam.mobitru
    clearState: true
    stopApp: true
- assertVisible: "Sign in with correct user"
- tapOn: "Sign in with correct user"
- assertVisible:
    id: "category"
