appId: "com.epam.mobitru"
---
- launchApp:
    appId: "com.epam.mobitru"
    clearState: false
- tapOn:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- assertVisible:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- tapOn:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- assertVisible:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- tapOn:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- assertVisible:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- tapOn:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- assertVisible:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- tapOn:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- assertVisible:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- tapOn:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- assertVisible:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- tapOn:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- assertVisible:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- tapOn:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- assertVisible:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- tapOn:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- assertVisible:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- tapOn:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- assertVisible:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- tapOn:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- assertVisible:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- tapOn:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- assertVisible:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- tapOn:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- assertVisible:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- tapOn:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- assertVisible:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- tapOn:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
- assertVisible:
    text: "artifacts/record-snapshots/rec-1773886794611-3cd5b0e9-end.xml"
