appId: "com.epam.mobitru"
---
- launchApp:
    appId: "com.epam.mobitru"
    clearState: false
- tapOn:
    text: "artifacts/record-snapshots/rec-1773888681510-e438d419-end.xml"
- assertVisible:
    text: "artifacts/record-snapshots/rec-1773888681510-e438d419-end.xml"
- tapOn:
    text: "artifacts/record-snapshots/rec-1773888681510-e438d419-end.xml"
- assertVisible:
    text: "artifacts/record-snapshots/rec-1773888681510-e438d419-end.xml"
- tapOn:
    text: "artifacts/record-snapshots/rec-1773888681510-e438d419-end.xml"
- assertVisible:
    text: "artifacts/record-snapshots/rec-1773888681510-e438d419-end.xml"
