appId: com.epam.mobitru
---
- launchApp:
    appId: com.epam.mobitru
    clearState: true
    stopApp: true
- assertVisible:
    id: "login_email"
- tapOn:
    id: "login_email"
- inputText: "testuser@mobitru.com"
- tapOn:
    id: "login_password"
- inputText: "password1"
- tapOn:
    id: "login_signin"
- assertVisible:
    id: "category"
